[add] variations of svm and nb

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing Packages"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +20,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +36,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dropping Unnecessary Columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +52,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoding Categorical Labels to Numerical"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +72,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dropping Duplicates/Missing Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +186,7 @@
        "[403 rows x 2 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +210,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +221,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop duplicates\n",
+    "df = df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check for missing values\n",
+    "df.isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting Class Densities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +268,7 @@
        "<Axes: title={'center': 'Occurences of Each Label'}, xlabel='Label', ylabel='Count'>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -217,89 +290,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 106,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# drop duplicates\n",
-    "df = df.drop_duplicates()"
+    "### Filtering Dataframe based on Entry Length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>v1</th>\n",
-       "      <th>v2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [v1, v2]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df.duplicated()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# check for missing values\n",
-    "df.isnull().values.any()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +319,7 @@
        "Name: count, Length: 274, dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,8 +340,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing upper cases, punctuation, non-alphanumeric characters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,8 +359,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tokenizing Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +375,8 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt_tab to\n",
-      "[nltk_data]     C:\\Users\\alihu\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     c:\\Users\\alihu\\Anaconda3\\envs\\cogs118a\\lib\\nltk_data..\n",
+      "[nltk_data]     .\n",
       "[nltk_data]   Package punkt_tab is already up-to-date!\n"
      ]
     },
@@ -372,7 +386,7 @@
        "True"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,8 +406,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gaussian Naive Bayes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -402,12 +423,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.97      1.00      0.99       887\n",
-      "           1       0.99      0.80      0.89       127\n",
+      "           0       0.98      0.76      0.86       874\n",
+      "           1       0.38      0.90      0.53       140\n",
       "\n",
-      "    accuracy                           0.97      1014\n",
-      "   macro avg       0.98      0.90      0.94      1014\n",
-      "weighted avg       0.97      0.97      0.97      1014\n",
+      "    accuracy                           0.78      1014\n",
+      "   macro avg       0.68      0.83      0.70      1014\n",
+      "weighted avg       0.90      0.78      0.81      1014\n",
       "\n"
      ]
     }
@@ -415,7 +436,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
     "X = df['v2']\n",
@@ -427,10 +448,283 @@
     "X_train_idf = vectorizer.fit_transform(X_train)\n",
     "X_test_idf = vectorizer.transform(X_test)\n",
     "\n",
+    "model = GaussianNB()\n",
+    "model.fit(X_train_idf.toarray(), Y_train)\n",
+    "\n",
+    "Y_pred = model.predict(X_test_idf.toarray())\n",
+    "\n",
+    "print(classification_report(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multinomial Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      1.00      0.98       876\n",
+      "           1       0.99      0.76      0.86       138\n",
+      "\n",
+      "    accuracy                           0.97      1014\n",
+      "   macro avg       0.98      0.88      0.92      1014\n",
+      "weighted avg       0.97      0.97      0.96      1014\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "model = MultinomialNB()\n",
     "model.fit(X_train_idf, Y_train)\n",
     "\n",
     "Y_pred = model.predict(X_test_idf)\n",
+    "\n",
+    "print(classification_report(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Kernel SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      1.00      0.99       898\n",
+      "           1       0.96      0.86      0.91       116\n",
+      "\n",
+      "    accuracy                           0.98      1014\n",
+      "   macro avg       0.97      0.93      0.95      1014\n",
+      "weighted avg       0.98      0.98      0.98      1014\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svm_model = SVC(kernel = 'linear', C = 1)\n",
+    "svm_model.fit(X_train_idf, Y_train)\n",
+    "\n",
+    "Y_pred = svm_model.predict(X_test_idf)\n",
+    "\n",
+    "print(classification_report(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2nd Degree Polynomial Kernel SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      1.00      0.98       898\n",
+      "           1       0.98      0.76      0.85       116\n",
+      "\n",
+      "    accuracy                           0.97      1014\n",
+      "   macro avg       0.97      0.88      0.92      1014\n",
+      "weighted avg       0.97      0.97      0.97      1014\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_model = SVC(kernel = 'poly', degree = 2)\n",
+    "svm_model.fit(X_train_idf, Y_train)\n",
+    "\n",
+    "Y_pred = svm_model.predict(X_test_idf)\n",
+    "\n",
+    "print(classification_report(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3rd Degree Polynomial Kernel SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      1.00      0.97       898\n",
+      "           1       0.97      0.57      0.72       116\n",
+      "\n",
+      "    accuracy                           0.95      1014\n",
+      "   macro avg       0.96      0.78      0.84      1014\n",
+      "weighted avg       0.95      0.95      0.94      1014\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_model = SVC(kernel = 'poly', degree = 3)\n",
+    "svm_model.fit(X_train_idf, Y_train)\n",
+    "\n",
+    "Y_pred = svm_model.predict(X_test_idf)\n",
+    "\n",
+    "print(classification_report(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Radial Basis Function Kernel SVM with width = .01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.89      1.00      0.94       898\n",
+      "           1       0.00      0.00      0.00       116\n",
+      "\n",
+      "    accuracy                           0.89      1014\n",
+      "   macro avg       0.44      0.50      0.47      1014\n",
+      "weighted avg       0.78      0.89      0.83      1014\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\alihu\\Anaconda3\\envs\\cogs118a\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\alihu\\Anaconda3\\envs\\cogs118a\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\alihu\\Anaconda3\\envs\\cogs118a\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_model = SVC(kernel = 'rbf', gamma = .01)\n",
+    "svm_model.fit(X_train_idf, Y_train)\n",
+    "\n",
+    "Y_pred = svm_model.predict(X_test_idf)\n",
+    "\n",
+    "print(classification_report(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Radial Basis Function Kernel SVM with width = .1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      1.00      0.98       898\n",
+      "           1       0.96      0.76      0.85       116\n",
+      "\n",
+      "    accuracy                           0.97      1014\n",
+      "   macro avg       0.96      0.88      0.91      1014\n",
+      "weighted avg       0.97      0.97      0.97      1014\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_model = SVC(kernel = 'rbf', gamma = .1)\n",
+    "svm_model.fit(X_train_idf, Y_train)\n",
+    "\n",
+    "Y_pred = svm_model.predict(X_test_idf)\n",
+    "\n",
+    "print(classification_report(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Radial Basis Function Kernel SVM with width = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      1.00      0.99       898\n",
+      "           1       0.98      0.84      0.91       116\n",
+      "\n",
+      "    accuracy                           0.98      1014\n",
+      "   macro avg       0.98      0.92      0.95      1014\n",
+      "weighted avg       0.98      0.98      0.98      1014\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_model = SVC(kernel = 'rbf', gamma = 1)\n",
+    "svm_model.fit(X_train_idf, Y_train)\n",
+    "\n",
+    "Y_pred = svm_model.predict(X_test_idf)\n",
     "\n",
     "print(classification_report(Y_test, Y_pred))"
    ]
