--- a/main.ipynb
+++ b/main.ipynb
@@ -728,6 +728,31 @@
     "\n",
     "print(classification_report(Y_test, Y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprpocessing.sequence import pad_sequences\n",
+    "\n",
+    "sequences = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, GRU, Dense\n",
+    "\n",
+    "vocab_size = len(tokenizer.word_index) + 1\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
