--- a/main.ipynb
+++ b/main.ipynb
@@ -6,11 +6,11 @@
         "!git clone https://github.com/alihuss1017/Spam-Classifier"
       ],
       "metadata": {
-        "id": "sXOVjO-_vcms",
-        "outputId": "aa363c3c-8f1b-40b4-a62d-46af67b2acb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sXOVjO-_vcms",
+        "outputId": "aa363c3c-8f1b-40b4-a62d-46af67b2acb8"
       },
       "execution_count": 6,
       "outputs": [
@@ -35,11 +35,11 @@
         "cd Spam-Classifier"
       ],
       "metadata": {
-        "id": "lnHjfeIrvo-2",
-        "outputId": "c8bc5105-e1b0-4521-8732-d4dcbdbae907",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lnHjfeIrvo-2",
+        "outputId": "c8bc5105-e1b0-4521-8732-d4dcbdbae907"
       },
       "execution_count": 7,
       "outputs": [
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 26,
       "metadata": {
         "id": "vKdX8yfRvYCa"
       },
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 27,
       "metadata": {
         "id": "t12Z5v2fvYCb"
       },
@@ -95,14 +95,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 28,
       "metadata": {
-        "id": "Q4BFglifvYCb",
-        "outputId": "004d50e3-4339-4c0b-e439-84308b50cfc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
+          "height": 293
+        },
+        "id": "Q4BFglifvYCb",
+        "outputId": "ad4e5834-ef43-4e17-ccff-f270a2e201a9"
       },
       "outputs": [
         {
@@ -125,7 +125,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3270288d-5abd-4bbf-b33f-82fdc5432dd2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d77cd34e-3994-41e1-9f41-094fda69e34a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -198,7 +198,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3270288d-5abd-4bbf-b33f-82fdc5432dd2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d77cd34e-3994-41e1-9f41-094fda69e34a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -250,12 +250,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3270288d-5abd-4bbf-b33f-82fdc5432dd2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d77cd34e-3994-41e1-9f41-094fda69e34a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3270288d-5abd-4bbf-b33f-82fdc5432dd2');\n",
+              "        const element = document.querySelector('#df-d77cd34e-3994-41e1-9f41-094fda69e34a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -275,8 +275,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-07b48c96-5653-4cab-84d8-e309d2d98bcb\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-07b48c96-5653-4cab-84d8-e309d2d98bcb')\"\n",
+              "<div id=\"df-cbca5016-0840-46f6-9fd7-96df9c4c3182\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cbca5016-0840-46f6-9fd7-96df9c4c3182')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -395,7 +395,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-07b48c96-5653-4cab-84d8-e309d2d98bcb button');\n",
+              "        document.querySelector('#df-cbca5016-0840-46f6-9fd7-96df9c4c3182 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -412,7 +412,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 28
         }
       ],
       "source": [
@@ -430,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 29,
       "metadata": {
         "id": "zh0egl00vYCb"
       },
@@ -450,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 30,
       "metadata": {
         "id": "3FsIGGmpvYCc"
       },
@@ -474,14 +474,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 31,
       "metadata": {
-        "id": "71aVOeMEvYCc",
-        "outputId": "142ea43e-8e31-4423-a3cf-18dfddde21cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "71aVOeMEvYCc",
+        "outputId": "d0705af5-d816-4d96-a7e3-4e614c8000d5"
       },
       "outputs": [
         {
@@ -505,7 +505,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d532fc75-c3a5-4d60-a124-479782ef5335\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-82bb72c5-2834-47e5-b326-e80413a06c50\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -591,7 +591,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d532fc75-c3a5-4d60-a124-479782ef5335')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-82bb72c5-2834-47e5-b326-e80413a06c50')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -643,12 +643,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d532fc75-c3a5-4d60-a124-479782ef5335 button.colab-df-convert');\n",
+              "        document.querySelector('#df-82bb72c5-2834-47e5-b326-e80413a06c50 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d532fc75-c3a5-4d60-a124-479782ef5335');\n",
+              "        const element = document.querySelector('#df-82bb72c5-2834-47e5-b326-e80413a06c50');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -668,8 +668,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-41d12570-2835-456a-823b-457f7a73b2db\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-41d12570-2835-456a-823b-457f7a73b2db')\"\n",
+              "<div id=\"df-a2d81d66-5d8a-4017-8b35-f93e0a41313b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a2d81d66-5d8a-4017-8b35-f93e0a41313b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -788,7 +788,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-41d12570-2835-456a-823b-457f7a73b2db button');\n",
+              "        document.querySelector('#df-a2d81d66-5d8a-4017-8b35-f93e0a41313b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -804,7 +804,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 31
         }
       ],
       "source": [
@@ -814,13 +814,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 32,
       "metadata": {
-        "id": "TrUzqHNzvYCc",
-        "outputId": "9f82749b-6ce8-4bda-fef4-f99a47231706",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TrUzqHNzvYCc",
+        "outputId": "112db680-e7fd-43ff-c3ac-f865940c3f7f"
       },
       "outputs": [
         {
@@ -831,7 +831,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 32
         }
       ],
       "source": [
@@ -850,14 +850,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 33,
       "metadata": {
-        "id": "V3GiCbl4vYCc",
-        "outputId": "18b90fa7-be69-4740-a6bf-7d93e75ab294",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
-        }
+          "height": 503
+        },
+        "id": "V3GiCbl4vYCc",
+        "outputId": "b60e3c63-9cce-4f01-c074-527cf1ff5abd"
       },
       "outputs": [
         {
@@ -868,7 +868,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 33
         },
         {
           "output_type": "display_data",
@@ -898,14 +898,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 34,
       "metadata": {
-        "id": "Qa5kURIovYCc",
-        "outputId": "16ba49df-4d7c-4fa2-ae80-3d523043be6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 490
-        }
+        },
+        "id": "Qa5kURIovYCc",
+        "outputId": "21b49395-3fd8-498e-de96-14bceccca588"
       },
       "outputs": [
         {
@@ -1004,7 +1004,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 34
         }
       ],
       "source": [
@@ -1015,7 +1015,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 35,
       "metadata": {
         "id": "Ri-MM7tevYCd"
       },
@@ -1035,7 +1035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 36,
       "metadata": {
         "id": "Xf8ABX23vYCd"
       },
@@ -1049,14 +1049,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 37,
       "metadata": {
-        "id": "F6LJAYmDvYCd",
-        "outputId": "4f667dc2-0831-489a-94de-c602d7351415",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        }
+        },
+        "id": "F6LJAYmDvYCd",
+        "outputId": "88f7af2d-f9d3-4046-9c55-9faf4524488c"
       },
       "outputs": [
         {
@@ -1185,7 +1185,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 37
         }
       ],
       "source": [
@@ -1194,13 +1194,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 38,
       "metadata": {
-        "id": "GMMKaWSBvYCd",
-        "outputId": "75bf171c-cc5e-4351-a7c5-715e43b0b402",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GMMKaWSBvYCd",
+        "outputId": "d5553619-5f0e-406d-80f3-2d4c3975cf60"
       },
       "outputs": [
         {
@@ -1208,7 +1208,7 @@
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
           ]
         }
       ],
@@ -1229,7 +1229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 39,
       "metadata": {
         "id": "N5KNCEBNvYCd"
       },
@@ -1264,7 +1264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 40,
       "metadata": {
         "id": "YZ7z4jeqvYCd"
       },
@@ -1285,7 +1285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 41,
       "metadata": {
         "id": "bRj2OABEvYCd"
       },
@@ -1311,29 +1311,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 43,
       "metadata": {
-        "id": "tHlaZIl8vYCd",
-        "outputId": "feaddb5f-a89c-40f7-d92e-cebcf8e7437d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tHlaZIl8vYCd",
+        "outputId": "722b5b0f-b2e2-48af-9d2c-61c58946ee65"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/10, Loss: 0.4587340716804777\n",
-            "Epoch 2/10, Loss: 0.4545392543077469\n",
-            "Epoch 3/10, Loss: 0.45452652391278264\n",
-            "Epoch 4/10, Loss: 0.45459828206471037\n",
-            "Epoch 5/10, Loss: 0.45451981647984013\n",
-            "Epoch 6/10, Loss: 0.4545186260790179\n",
-            "Epoch 7/10, Loss: 0.4545942025306897\n",
-            "Epoch 8/10, Loss: 0.4545174236153508\n",
-            "Epoch 9/10, Loss: 0.4545170977547929\n",
-            "Epoch 10/10, Loss: 0.4545932010962413\n"
+            "Epoch 1/10, Loss: 0.4590561540026368\n",
+            "Epoch 2/10, Loss: 0.4546189363295342\n",
+            "Epoch 3/10, Loss: 0.454527260073812\n",
+            "Epoch 4/10, Loss: 0.45459855645349173\n",
+            "Epoch 5/10, Loss: 0.45459626096508876\n",
+            "Epoch 6/10, Loss: 0.4545950112871198\n",
+            "Epoch 7/10, Loss: 0.4545179359860473\n",
+            "Epoch 8/10, Loss: 0.4545174568564027\n",
+            "Epoch 9/10, Loss: 0.4546697385909356\n",
+            "Epoch 10/10, Loss: 0.4545932309531467\n"
           ]
         }
       ],
@@ -1345,6 +1345,7 @@
         "num_layers = 2\n",
         "\n",
         "model = SpamClassifier(vocab_size, embed_dim, hidden_dim, output_dim, num_layers)\n",
+        "model.to('cuda')\n",
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(model.parameters(), lr = .001)\n",
         "\n",
@@ -1355,6 +1356,7 @@
         "    total_loss = 0\n",
         "\n",
         "    for data, label in train_loader:\n",
+        "        data, label = data.to('cuda'), label.to('cuda')\n",
         "        optimizer.zero_grad()\n",
         "        output = model(data)\n",
         "        loss = criterion(output, label)\n",
@@ -1364,6 +1366,44 @@
         "        total_loss += loss.item()\n",
         "\n",
         "    print(f'Epoch {epoch + 1}/{num_epochs}, Loss: {total_loss / len(train_loader)}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "model.eval()\n",
+        "y_pred = []\n",
+        "y_true = []\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "  for data, label in test_loader:\n",
+        "    data, label = data.to('cuda'), label.to('cuda')\n",
+        "    output = model(data)\n",
+        "    preds = torch.argmax(output, 1)\n",
+        "    y_pred.extend(preds.cpu().numpy())\n",
+        "    y_true.extend(label.cpu().numpy())\n",
+        "\n",
+        "accuracy = accuracy_score(y_true, y_pred)\n",
+        "print(f'Test Accuracy: {accuracy * 100: .2f}%')"
+      ],
+      "metadata": {
+        "id": "nRqy_yDaw4tc",
+        "outputId": "60cd1bc3-f55d-4892-94e9-3ea4f3275975",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test Accuracy:  88.19%\n"
+          ]
+        }
       ]
     }
   ],
